[project]
name = "litesched"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "PokkaKiyo", email = "31039465+PokkaKiyo@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.0",
    "litestar[cryptography,standard]>=2.14.0",
    "pydantic-settings>=2.8.0",
]

[project.scripts]
litesched = "litesched:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
